# compenv

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  docker_entrypoint.sh  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  ci.yml  docker.yml  lint.yml  test.yml
compenv/: __init__.py  backend.py  types.py
compenv/adapters/: __init__.py  abstract.py  controller.py  distribution.py  entity.py  module.py  presenter.py  repository.py  translator.py  unit_of_work.py
compenv/infrastructure/: __init__.py  connection.py  entrypoint.py  facade.py  factory.py  hook.py  schema.py  table.py  transaction.py  types.py
compenv/model/: __init__.py  computation.py  environment.py  record.py
compenv/service/: __init__.py  abstract.py  diff.py  record.py
repro/: __init__.py  distribution.py  hierarchy.py  hook.py  model.py  module.py  part.py
repro/adapters/: __init__.py  abstract.py  controller.py  distribution.py  entity.py  module.py  repository.py  translator.py
repro/infrastructure/: __init__.py  entrypoint.py  facade.py  factory.py  hook.py
repro/model/: __init__.py  computation.py  environment.py  model.py  record.py
repro/service/: __init__.py  abstract.py  record.py
scripts/: build.sh  mypy_ignored.txt
stubs/datajoint/: __init__.pyi  autopopulate.pyi  connection.pyi  errors.pyi  schemas.pyi  table.pyi  user_tables.pyi
tests/: conftest.py
tests/functional/: test_diff.py  test_record_use_case.py
tests/integration/model/: test_recording_service.py
tests/unit/: conftest.py  test_backend.py  test_distribution.py  test_hierarchy.py  test_hook.py  test_model.py  test_module.py  test_part.py  test_translator.py
tests/unit/adapters/: conftest.py  test_controller.py  test_distribution.py  test_init.py  test_module.py  test_presenter.py  test_record_table.py  test_repository.py  test_translator.py  test_unit_of_work.py
tests/unit/infrastructure/: conftest.py  test_connection.py  test_entrypoint.py  test_facade.py  test_factory.py  test_hook.py  test_infrastructure_init.py  test_init.py  test_table.py
tests/unit/model/: conftest.py  test_computation.py  test_environment.py  test_model.py  test_record.py
tests/unit/service/: conftest.py  test_abstract.py  test_diff.py  test_diff_service.py  test_init.py  test_record.py  test_record_service.py
workflows/: lint.sh  mypy_ignored.txt  mypy_wrapper.sh  test.sh
