[project]
name = "reproducibility"
version = "0.1.0"
description = ""
authors = [
    {name = "Christoph Blessing", email = "33834216+cblessing24@users.noreply.github.com"},
]
dependencies = [
    "datajoint~=0.13",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPL-3.0-or-later"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pytest~=6.2",
    "black~=21.5b0",
    "pylint~=2.8",
    "flake8~=3.9",
    "isort~=5.8",
    "mypy~=0.812",
    "flake8-docstrings~=1.6",
    "pytest-cov~=2.11",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.pylint.master]
max-line-length = 120
ignore-patterns = ["test_.*\\.py", "conftest\\.py"]

[tool.pylint.messages_control]
enable = ["useless-suppression"]

[tool.mypy]
python_version = "3.9"
exclude = "__pypackages__"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "datajoint.*", 
    "pytest.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["repro"]
